--- a/etc/nginx.service
+++ b/etc/nginx.service
@@ -3,7 +3,8 @@ Description=The NGINX HTTP and reverse proxy server
 After=syslog.target network.target remote-fs.target nss-lookup.target
 
 [Service]
-ExecStart=exec su root -c "/opt/nginx-clojure-0.4.4/nginx 2>&1 | logger -t nginx-relembra" | logger -t nginx-boot
+ExecStart=/opt/nginx-clojure-0.4.4/nginx 2>&1 | logger -t nginx
+WorkingDirectory=/opt/nginx-clojure-0.4.4
 PrivateTmp=true
 
 [Install]
