fix nginx service start; enable TLS

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -65,19 +65,18 @@ http {
     server {
         listen         80;
         server_name    relembra.estevo.eu;
-# Commented out while we don't set up letsencrypt.
-###        return         301 https://$server_name$request_uri;
-###    }
-###
-###    server {
-###        listen  443 ssl default_server;
-###        server_name  relembra.estevo.eu;
-###
-###        ssl_certificate /etc/letsencrypt/live/relembra.estevo.eu/fullchain.pem;
-###        ssl_certificate_key /etc/letsencrypt/live/relembra.estevo.eu/privkey.pem;
-###
-###        add_header Strict-Transport-Security "max-age=31536000";
-###        #access_log  logs/host.access.log  main;
+        return         301 https://$server_name$request_uri;
+    }
+
+    server {
+        listen  443 ssl default_server;
+        server_name  relembra.estevo.eu;
+
+        ssl_certificate /etc/letsencrypt/live/relembra.estevo.eu/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/relembra.estevo.eu/privkey.pem;
+
+        add_header Strict-Transport-Security "max-age=31536000";
+        #access_log  logs/host.access.log  main;
 
         location / {
            content_handler_name 'relembra.core/app';
