first shot at installing datomic

--- a/etc/nginx.service
+++ b/etc/nginx.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=The NGINX HTTP and reverse proxy server
-After=syslog.target network.target remote-fs.target nss-lookup.target
+After=syslog.target network.target remote-fs.target nss-lookup.target datomic.service
 
 [Service]
 ExecStart=/bin/sh -c "/opt/nginx-clojure-0.4.4/nginx 2>&1 | logger -t nginx"
