--- a/etc/datomic.service
+++ b/etc/datomic.service
@@ -2,8 +2,8 @@
 Description=Datomic database
 
 [Service]
-ExecStart=/bin/sh -c "/opt/datomic-free-0.9.5372/bin/transactor -Xms800m -Xmx800m /opt/datomic-free-0.9.5372/config/datomic-free-transactor.properties 2>&1 | logger -t datomic"
-WorkingDirectory=/opt/datomic-free-0.9.5372
+ExecStart=/opt/datomic/current/bin/transactor -Xmx800m -Xms800m /opt/datomic/transactor.properties
+WorkingDirectory=/opt/datomic/current/bin
 PrivateTmp=true
 User=datomic
 
