absolute path of data directory

--- a/etc/datomic-free-transactor.properties
+++ b/etc/datomic-free-transactor.properties
@@ -42,7 +42,7 @@ encrypt-channel=false
 
 # Data directory is used for dev: and free: storage, and
 # as a temporary directory for all storages.
-# data-dir=data
+data-dir=/opt/datomic/data
 
 # Transactor will log here, see bin/logback.xml to configure logging.
 # log-dir=log
