--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
+/target
+/lib
+/classes
+/checkouts
 pom.xml
-pom.xml.asc
-*jar
-/lib/
-/classes/
-/target/
-/checkouts/
-/out/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
-.cljs_rhino_repl/
-.nrepl-*
-.#*
+dev-config.edn
+test-config.edn
+*.jar
+*.class
+/.lein-*
+profiles.clj
+/.env
+.nrepl-port
+/.shadow-cljs
+package.json
+shadow-cljs.edn
+/node_modules
+/log
